@@ -4,6 +4,7 @@ CHANGES-1.3.txt
 CHANGES IN CUPS V1.3.8
 
 	- Documentation updates (STR #2785)
+	- Fixed a compile problem with glibc 2.8 (STR #2860)
 	- The scheduler incorrectly filtered out queues with ACLs and
 	  authentication.
 	- The PostScript filter did not support %%IncludeFeature lines
